Init Blog SCSS - Fix alignment and images @ mobile

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -77,18 +77,6 @@ h3 {
 
 } // .page & .single Entry Headers
 
-.page-template-page_blog {
-
-    .entry-header {
-        padding-bottom: $space-default-middle + 5px;
-    }
-
-    .entry-title {
-        font-size: 54px;
-    }
-
-} // Blog Template entry header & title
-
 
 //-- INLINE ANCHORS --//
 .content .entry {
